fixed alignment issues

--- a/src/app/modules/dashboard/components/edit-requirement/edit-requirement.component.css
+++ b/src/app/modules/dashboard/components/edit-requirement/edit-requirement.component.css
@@ -38,7 +38,7 @@
 }
 
 .input {
-    width: 95%;
+    width: 94%;
     height: 34px;
     border-radius: 5px;
     outline: none;
@@ -276,7 +276,7 @@
 }
 
 .skills-main {
-    width: 98%;
+    width: 98.2%;
     /* height: 175px; */
 }
 
@@ -315,5 +315,13 @@
     padding-left: 5px;
     border: 1px solid #E9E9E9;
     margin-top: 10px;
-    width: 98.8%;
+    width: 97.9%;
 }
+
+.clear-filter{
+    right: 6px;
+}
+
+body::-webkit-scrollbar-track {
+    background: orange;        /* color of the tracking area */
+  }
