--- a/src/app/modules/dashboard/components/service-request/service-request.component.css
+++ b/src/app/modules/dashboard/components/service-request/service-request.component.css
@@ -294,5 +294,9 @@
     padding-left: 5px;
     border: 1px solid #E9E9E9;
     margin-top: 10px;
-    width: 98.1%
+    width: 97.4%;
+}
+
+.clear-filter{
+    right: 29px;
 }
